--- a/e-learning  Web UI/client/index.html
+++ b/e-learning  Web UI/client/index.html
@@ -290,7 +290,8 @@
     </div>
 
     <div class="form-container">
-        <form onsubmit="myfunc(event)">
+        <form action="https://formspree.io/f/xleyebna"
+        method="POST" onsubmit="myfunc(event)">
             <input type="text" placeholder="full name" name="name" id="name">
             <input type="email" placeholder="enter your email" name="email" id="email">
             <input type="int text" placeholder="phone" name="phone" id="phone">
